--- a/src/ts/components/index.scss
+++ b/src/ts/components/index.scss
@@ -5,6 +5,7 @@
 @import './debug-bar/debug-bar.component';
 @import './delete-data-form/delete-data-form.component';
 @import './fsbdr-mainbar/fsbdr-mainbar.component';
+@import './fsbdr-video/fsbdr-video.component';
 @import './icon/icon.component';
 @import './instagram/instagram.component';
 @import './instagram-scrollbar/instagram-scrollbar.component';
