--- a/src/ts/components/instagram/instagram.component.html
+++ b/src/ts/components/instagram/instagram.component.html
@@ -7,9 +7,9 @@
     <img lazyload="lazy" class="content lazy" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-src="image.media_url" rv-alt="image.caption">
     
     {% comment %} VIDEO {% endcomment %}
-    <video class="content lazy" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload>
+    <video class="content lazy" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload playsinline webkit-playsinline>
       <source rv-src="image.media_url" type="video/mp4">
-    Your browser does not support the video tag.
+      Your browser does not support the video tag.
     </video>
 
     {% comment %} hover info {% endcomment %}
