--- a/theme/sections/instagram-scrollbar.liquid
+++ b/theme/sections/instagram-scrollbar.liquid
@@ -26,10 +26,14 @@
       <img lazyload="lazy" class="content lazy" rv-if="image.media_type | eq 'CAROUSEL_ALBUM'" rv-src="image.media_url" rv-alt="image.caption">
       
       {% comment %} VIDEO {% endcomment %}
-      <video class="content lazy" rv-if="image.media_type | eq 'VIDEO'" autoplay muted loop preload>
-        <source rv-src="image.media_url" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+      <fsbdr-video rv-if="image.media_type | eq 'VIDEO'" rv-mp4-src="image.media_url">
+        <video class="content lazy" autoplay muted loop preload playsinline webkit-playsinline>
+          <source rv-src="mp4Src" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <rv-icon rv-hide="muted" rv-on-click="toggleMute" size="50" class="video-volume-high" src="{{ 'icon_volume-high_alt.svg' | asset_url }}"></rv-icon>
+        <rv-icon rv-show="muted" rv-on-click="toggleMute" size="50" class="video-volume-mute" src="{{ 'icon_vol-mute_alt.svg' | asset_url }}"></rv-icon>
+      </fsbdr-video>
     </div>
 
   </div>
