--- a/theme/sections/instagram.liquid
+++ b/theme/sections/instagram.liquid
@@ -18,8 +18,10 @@
           <source rv-src="mp4Src" type="video/mp4">
           Your browser does not support the video tag.
         </video>
-        <rv-icon rv-hide="muted" rv-on-click="toggleMute" size="50" class="video-volume-high" src="{{ 'icon_volume-high_alt.svg' | asset_url }}"></rv-icon>
-        <rv-icon rv-show="muted" rv-on-click="toggleMute" size="50" class="video-volume-mute" src="{{ 'icon_vol-mute_alt.svg' | asset_url }}"></rv-icon>
+        <div rv-hide="controls" class="video-custom-controls">
+          <rv-icon rv-hide="muted" rv-on-click="toggleMute" size="50" class="video-volume-high" src="{{ 'icon_volume-high_alt.svg' | asset_url }}"></rv-icon>
+          <rv-icon rv-show="muted" rv-on-click="toggleMute" size="50" class="video-volume-mute" src="{{ 'icon_vol-mute_alt.svg' | asset_url }}"></rv-icon>
+        </div>
       </fsbdr-video>
 
       {% comment %} hover info {% endcomment %}
