--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -161,7 +161,10 @@
     <shopify-linklist class="mt-5" id="toggle-menu" name="toggle-menu" vertical="true" pills="false">
       <nav class="nav" rv-add-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
         <div class="nav-item" rv-each-link="linklist.links">
+
+          {% comment %} Normal {% endcomment %}
           <a
+            rv-if="link.collapseable | not"
             class="nav-link justify-content-center"
             rv-route-class-active="link.url"
             rv-route="link.url"
@@ -169,6 +172,33 @@
           >
             <span rv-i18n-text="link.title | handleize | prepend 'menus.'">{link.title}</span>
           </a>
+
+          {% comment %} Collapseable {% endcomment %}
+          <button rv-if="link.collapseable" class="btn nav-link mx-auto" rv-on-click="toggle | args link">
+            <span class="font-weight-bold" rv-i18n-text="link.title | handleize | prepend 'menus.'">{link.title}</span>
+          </button>
+
+          <div class="nav-item nav-item-level-2 d-flex align-items-center text-center" rv-hide="link.collapsed" rv-each-sublink="link.links" rv-route-class-active="sublink.url">
+            <a
+              class="nav-link mx-auto"
+              rv-route-class-active="sublink.url"
+              rv-route="sublink.url"
+              rv-href="sublink.url"
+            >
+              <span rv-i18n-text="sublink.title | handleize | prepend 'menus.'">{sublink.title}</span>
+            </a>
+            <div class="nav-item nav-item-level-3" rv-each-subsublink="sublink.links" rv-route-class-active="subsublink.url">
+              <a
+                class="nav-link"
+                rv-route-class-active="subsublink.url"
+                rv-route="subsublink.url"
+                rv-href="subsublink.url"
+              >
+                <span rv-i18n-text="subsublink.title | handleize | prepend 'menus.'">{subsublink.title}</span>
+              </a>
+            </div>
+          </div>
+
         </div>
       </nav>
     </shopify-linklist>
