--- a/theme/snippets/jumplink-collection-grid-item.liquid
+++ b/theme/snippets/jumplink-collection-grid-item.liquid
@@ -12,7 +12,7 @@
           
       <div class="background-box {{ settings.collections_aspect_ratio }}" style="background-image: url({{ image }});" title="{{ title }}"></div>
       <div class="caption caption-y-center caption-x-center text-nowrap">
-        {{ collection.title | strip_html }}
+        {{ collection.title | stripHtml }}
       </div>
     </a>
   </div>
