--- a/theme/templates/gift_card.liquid
+++ b/theme/templates/gift_card.liquid
@@ -1,7 +1,7 @@
 {% layout none %}
 
 {% assign formatted_initial_value = gift_card.initial_value | money_without_trailing_zeros: gift_card.currency %}
-{% assign formatted_initial_value_stripped = formatted_initial_value | strip_html %}
+{% assign formatted_initial_value_stripped = formatted_initial_value | stripHtml %}
 
 <!DOCTYPE html>
 <html>
