--- a/theme/snippets/jumplink-footer.liquid
+++ b/theme/snippets/jumplink-footer.liquid
@@ -204,10 +204,10 @@
     </shopify-linklist>
 
     <div class="d-block">
-      <tda-i18n-switcher class="d-flex">
+      <i18n-switcher class="d-flex">
         <div class="nav-item nav-link cursor-pointer text-uppercase" rv-each-langcode="langcodes" rv-text="langcode.code" rv-on-click="switch | args langcode" rv-class-active="langcode.active">
         </div>
-      </tda-i18n-switcher>
+      </i18n-switcher>
     </div>
 
     <div class="nav-item nav-link more-menu-toggler cursor-pointer d-block" rv-aria-expanded="moreMenuOpen" rv-on-click="globalToggle | args 'moreMenuOpen'">
