--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -126,7 +126,7 @@
             </a>
           </li>
 
-          <tda-i18n-switcher rv-show="menuOpen">
+          <i18n-switcher rv-show="menuOpen">
             <li class="nav-item" rv-each-langcode="langcodes">
               <div
                 class="nav-link text-uppercase"
@@ -135,7 +135,7 @@
                 rv-class-active="langcode.active"
               ></div>
             </li>
-          </tda-i18n-switcher>
+          </i18n-switcher>
 
           <shopify-linklist rv-show="menuOpen" class="" id="toggle-menu" name="toggle-menu" vertical="false" pills="false"></shopify-linklist>
 
