--- a/theme/snippets/jumplink-article-list-item-view-2-grid-2-images.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-2-grid-2-images.liquid
@@ -104,7 +104,7 @@
 
           <div class="col px-0 content-box {{contentBoxClass}}">
             <img
-              lazyload="lazy"
+              loading="lazy"
               class="{{ imageClass }}"
               src="{{ image }}"
               alt="{{acticle.title}}"
