--- a/theme/sections/lookbook-02.liquid
+++ b/theme/sections/lookbook-02.liquid
@@ -48,7 +48,7 @@
       <div class="col-6 col-lg-4 col-xl-3 px-0 content-box {{ ratioClass }} {{ ratioClassMD }}">
       {% endif %}
         <img
-          lazyload="lazy"
+          loading="lazy"
           class="content lazy"
           src="{{ image | img_url: '1200x1600', crop: 'center', format: 'pjpg' }}"
           srcset="
