--- a/theme/sections/product-scrollbar.liquid
+++ b/theme/sections/product-scrollbar.liquid
@@ -6,7 +6,7 @@
       {% comment %} 900x1600 = 9x16 * 100 {% endcomment %}
       <div rv-on-tap="onProductTap" rv-on-mouseenter="onProductMouseenter" data-url="{{product.url}}" data-title="{{product.title}}" class="col-6 px-0 content-box ratio-3-4 cursor-pointer">
         <img
-          lazyload="lazy"
+          loading="lazy"
           class="content lazy"
           src="{{ product.featured_image | img_url: '1024x1365', crop: 'center', format: 'pjpg' }} 1024w"
           {% comment %}
